Update for 3.0-beta10

--- a/appinfo.json
+++ b/appinfo.json
@@ -12,13 +12,13 @@
     "dummy": 0
   },
   "targetPlatforms": [
-    "basalt"
+    "aplite", "basalt"
   ],
   "sdkVersion": "3",
   "resources": {
     "media": [
       {
-        "type":"raw",
+        "type":"png",
         "name":"GLOBE",
         "file":"images/globe.png"
       }
